# TorsionAngularBinStrings

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  environment.yml  minimalEnvironment.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini
.github/workflows/: test.yml
Analysis/: CorrelationPrunedEnsemble.ipynb  CustomTabsMacrocycle.ipynb  TabsRmsdAnalysis.ipynb  TabsShapeAnalysis.ipynb  analysis.py  helpers.py  plots.py
Data/TABS/: README.md
Data/Tests/: ensemble.pkl  ensemble.sdf  ensemble2.pkl  ligand.sdf  macrocycle.sdf  macrocycleDihedralProfiles.pkl  traj.h5
Data/nTABS/: README.md
Demos/: 00_AtomRenumbering.ipynb  01_OldFunctionalitiesNewAPI.ipynb  02_CustomTabs.ipynb  03_CustomTabs.ipynb  03_TestingNewAPI.ipynb  AnalyzeConformerEnsembles.ipynb  OldFunctionalitiesNewAPI.ipynb  TestingNewAPI.ipynb
Docs/: Makefile  requirements.txt
Docs/Source/: basicfunctionality.rst  conf.py  customTabsConcept.rst  customTabsReference.rst  faq.rst  gettingstarted.rst  index.rst  theory.rst
tabs/: __init__.py  application.py  custom.py  fits.py  helpers.py  multiplicity.py  plots.py  symmetry.py  tabs.py  test_tabs.py  torsions.py  trial.py
tabs/TorsionPreferences/: torsionPreferences_smallrings_formatted.txt  torsionPreferences_v2_fallback.json  torsionPreferences_v2_formatted.txt  torsionPreferences_v2_macrocycle.json  torsionPreferences_v2_regular.json  torsionPreferences_v2_smallring.json  torsionPreferences_v2_smarts_bounds.txt
tabs/torsionPreferences/: torsionPreferences_fallback_smarts_bounds.txt  (+3 more)
(+28 files in other folders)
