[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
test = ["pytest", "pytest-cov"]

[project]
name = "tabs"
version = "2.0.0"
description = "Torsion Angular Bin Strings"
authors = [
    { name = "Jessica Braun", email = "braunje@ethz.ch" }
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
dependencies = []
keywords = ["torsion space", "chemistry", "rdkit"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tabs"]

[tool.setuptools.package-data]
"tabs" = ["TorsionPreferences/*.json"]
